# slaslice

./: .gitignore  CMakeLists.txt  flake.nix  main.cpp
